init batch compression + switch jackson by msgpack in inter-vms messages